# parq

./: Cargo.toml  Readme.md
data/: example.parquet
examples/: arrow2_read_pq.rs  datafusion_deadend.rs  polars_apply_pq.rs  polars_w_col_lazy.rs  polars_w_col_pq.rs
