[package]
name = "parq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# conflicts with arrow2
# parquet = "11"
arrow = "11"
arrow2 = { version = "0.10.1", features = ["io_parquet", "io_parquet_compression"] }
polars = { version = "0.20", features = ["parquet", "lazy"] }
# no parquet or arrow support at all
# peroxide = { version = "0.30", features = ["nc", "csv"] }
